@@ -47,6 +47,7 @@ OCaml 4.01.1:
 
 Bug fixes:
 - PR#6173: Typing error message is worse that before
+- PR#6174: OCaml compiler loops on an example using GADTs (non -rectypes)
 
 OCaml 4.01.0:
 -------------
